# wow-emulator-archive

./: README.md
OpenWoW - 05.2005/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  SConstruct  TODO  TODO-ASSIGNED  configure.ac
OpenWoW - 05.2005/dep/src/: getopt.c
OpenWoW - 05.2005/doc/: Doxyfile  RELEASENOTES.txt
OpenWoW - 05.2005/src/: Makefile.am
OpenWoW - 05.2005/src/game/: AreaTrigger.h  AuraHandler.cpp  AuraHandler.h  Character.cpp  Character.h  CharacterHandler.cpp  CharacterHandler.h  ChatHandler.cpp  ChatHandler.h  Combat.cpp  Combat.h  Database.cpp  Database.h  DatabaseInterface.cpp  DatabaseInterface.h  GameClient.cpp  GameClient.h  GameObject.cpp  GameObject.h  Gossip.h  GossipHandler.cpp  GossipHandler.h  Group.cpp  Group.h  GroupHandler.cpp  GroupHandler.h  Item.cpp  Item.h  ItemHandler.cpp  ItemHandler.h  Level0.cpp  Level1.cpp  Level2.cpp  Level3.cpp  Makefile.am  MiscHandler.cpp  MiscHandler.h  MovementHandler.cpp  MovementHandler.h  MsgHandler.h  (+32 more)
OpenWoW - 05.2005/src/realmlist/: Accounts.cpp  Accounts.h  Makefile.am  RealmClient.cpp  RealmClient.h  RealmList.cpp  RealmList.h  RealmListSrv.cpp  RealmListSrv.h  SConscript  UserHashes.cpp  UserHashes.h  WorldCommSrv.cpp  WorldCommSrv.h
OpenWoW - 05.2005/src/shared/: Base.cpp  Base.h  Client.h  CommandInterpreter.cpp  CommandInterpreter.h  Common.h  Console.cpp  Console.h  Debug.cpp  Debug.h  Errors.h  Log.cpp  Log.h  Makefile.am  Network.cpp  Network.h  NetworkInterface.cpp  NetworkInterface.h  ObjVec.cpp  ObjVec.h  SConscript  Script.h  Server.cpp  Server.h  Singleton.h  Sockets.h  StrVec.cpp  StrVec.h  StringFun.cpp  StringFun.h  SystemFun.h  Threads.h  Vector.cpp  Vector.h  WSPackets.h  version.h
OpenWoW - 05.2005/src/srp/: Makefile.am  SConscript  SrpRealm.cpp  SrpRealm.h  SrpWorld.cpp  SrpWorld.h  bigint.c  bigint.h
OpenWoW - 05.2005/src/tools/: Makefile.am  dbc_convert.py
OpenWoW - 05.2005/src/wsdrealmlist/: Main.cpp  Makefile.am  SConscript
OpenWoW - 05.2005/src/wsdworldsrv/: Main.cpp  Makefile.am  SConscript
OpenWoW - 05.2005/win/: README.txt  wowpython_private.h  wsd-VC8.sln  wsd-vc7-scons.sln  wsd-vc7.sln
OpenWoW - 05.2005/win/VC7/: game.vcproj  realmlist.vcproj  shared.vcproj  srp.vcproj  wsdrealmlist.vcproj  wsdworldsrv.vcproj
Summit Battleserver Addon - 07.2008/BattlegroundCreatureAI/: Archbishop.cpp  Archbishop.h  Base.cpp  Base.h  Makefile.am  Moon++.txt  Setup.cpp  Setup.h  Warlock.cpp  Warlock.h
Summit Battleserver Addon - 07.2008/BattlegroundGossip/: Blacksmith.cpp  HunterTrainer.cpp  Makefile.am  Quest.cpp  SeasonVendor.cpp  Setup.cpp  Setup.h  Teleporter.cpp  TrelimLorn.cpp
Summit Battleserver Addon - 07.2008/BattlegroundRealm/: CustomClass.h  GenericBattleground.cpp  GenericBattleground.h  Global.cpp  Global.h  HealerBadges.cpp  HookMgr.cpp  HookMgr.h  Makefile.am  Mounts.cpp  Setup.cpp  Setup.h
Team Python/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  THANKS  TODO  config.cache  config.h  config.h.in  config.status  configure  configure.ac  reconf
Team Python/doc/: Makefile  Makefile.am  Makefile.in  Python_Readme.doc
Team Python/src/: Makefile  Makefile.am  Makefile.in
Team Python/src/game/: AuraHandler.cpp  AuraHandler.h  Character.cpp  Character.h  CharacterHandler.cpp  CharacterHandler.h  ChatHandler.cpp  ChatHandler.h  Combat.cpp  Combat.h  GameClient.cpp  GameClient.h  GameObject.cpp  GameObject.h  Group.cpp  Group.h  GroupHandler.cpp  GroupHandler.h  Item.cpp  Item.h  ItemHandler.cpp  ItemHandler.h  Level0.cpp  Level1.cpp  Level2.cpp  Level3.cpp  Makefile  Makefile.am  Makefile.in  MiscHandler.cpp  MiscHandler.h  MovementHandler.cpp  MovementHandler.h  MsgHandler.h  NPCHandler.cpp  NPCHandler.h  NPCHandler.old  Object.cpp  Object.h  ObjectMgr.cpp  (+26 more)
Team Python/src/realmlist/: Defines.h  Makefile  Makefile.am  Makefile.in  RealmClient.cpp  RealmClient.h  RealmListSrv.cpp  RealmListSrv.h
Team Python/src/redirect/: Makefile  Makefile.am  Makefile.in  RedirectorSrv.cpp  RedirectorSrv.h
Team Python/src/shared/: Client.cpp  Client.h  Common.h  Database.cpp  Database.h  DatabaseInterface.cpp  DatabaseInterface.h  Errors.h  Log.cpp  Log.h  Makefile  Makefile.am  Makefile.in  MemoryLeaks.cpp  MemoryLeaks.h  Network.cpp  Network.h  NetworkInterface.cpp  Script.cpp  Script.h  Server.cpp  Server.h  Singleton.h  Sockets.h  Threads.cpp  Threads.h  Timer.h  UserAccount.cpp  UserAccount.h  WSPackets.h
Team Python/src/wowpython/: Main.cpp  Makefile  Makefile.am  Makefile.in  WoWPython.conf  version.h
Team Python/win/: Makefile.win  WSDServer.conf  wowpython.dev  wowpythonVC6.dsw  wowpythonVC70.sln  wowpythonVC71.sln  wowpython_private.h  wowpython_private.rc
Team Python/win/VC6/: Thumbs.db  game.dsp  game.vcproj  realmlist.dsp  realmlist.vcproj  redirect.dsp  redirect.vcproj  resource.h  resource1.h  shared.aps  shared.dsp  shared.rc  shared.vcproj  wowpython.aps  wowpython.dsp  wowpython.rc  wowpython.vcproj
Team Python/win/VC70/: game.vcproj  realmlist.vcproj  redirect.vcproj  shared.vcproj  wowpython.rc  wowpython.vcproj
Team Python/win/VC71/: game.vcproj  realmlist.vcproj  redirect.vcproj  resource.h  shared.vcproj  wowpython.aps  wowpython.ncb  wowpython.rc  wowpython.vcproj
WoWD - 03.2006/src/wowd/: Main.cpp  Makefile.am  Master.cpp  Master.h  WorldRunnable.cpp
WoWD - Rev. 131B - 04.2005/src/game/: Affect.h  AuctionHouse.cpp  Channel.cpp  Channel.h  ChannelHandler.cpp  CharacterHandler.cpp  Chat.cpp  Chat.h  ChatHandler.cpp  CombatHandler.cpp  Corpse.h  Creature.cpp  Creature.h  DynamicObject.cpp  DynamicObject.h  GameObject.cpp  GameObject.h  Group.cpp  Group.h  GroupHandler.cpp  Item.cpp  Item.h  ItemHandler.cpp  ItemPrototype.h  Level0.cpp  Level1.cpp  Level2.cpp  Level3.cpp  Mail.cpp  Mail.h  Makefile.am  MapCell.h  MapMgr.cpp  MapMgr.h  MiscHandler.cpp  MovementHandler.cpp  NPCHandler.cpp  NPCHandler.h  NameTables.h  Object.cpp  (+30 more)
WoWD - Rev. 131B - 04.2005/src/realmlist/: AuthSocket.cpp  Makefile.am  RealmList.cpp  RealmList.h
WoWD - Rev. 131B - 04.2005/src/shared/: ByteBuffer.h  Common.h  Common.h.bak  Errors.h  Log.cpp  (+7 more)
(+4706 files in other folders)
