# Copyright (C) 2004 Team Python
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

## Process this file with automake to produce Makefile.in

EXTRA_DIST = reconf configure TODO
SUBDIRS = doc src

EXTRA_DIST += win/wowpythonVC6.dsw win/VC6/wowpython.dsp \
              win/VC6/game.dsp win/VC6/realmlist.dsp \
              win/VC6/redirect.dsp win/VC6/shared.dsp

EXTRA_DIST += win/wowpythonVC70.sln win/VC70/wowpython.vcproj \
              win/VC70/game.vcproj win/VC70/realmlist.vcproj \
              win/VC70/redirect.vcproj win/VC70/shared.vcproj

EXTRA_DIST += win/wowpythonVC71.sln win/VC71/wowpython.vcproj \
              win/VC71/game.vcproj win/VC71/realmlist.vcproj \
              win/VC71/redirect.vcproj win/VC71/shared.vcproj

EXTRA_DIST += dep/lib/libmysqlclient.a dep/lib/libmySQLmingw.a
EXTRA_DIST += win/wowpython.dev

EXTRA_DIST += dep/lib/debug/libmySQL.dll dep/lib/debug/libmySQL.lib
EXTRA_DIST += dep/lib/release/libmySQL.dll dep/lib/release/libmySQL.lib

EXTRA_DIST += dep/inc/mysql/config-win.h dep/inc/mysql/dbug.h \
              dep/inc/mysql/errmsg.h dep/inc/mysql/libmysqld.def \
              dep/inc/mysql/Libmysql.def dep/inc/mysql/m_ctype.h \
              dep/inc/mysql/m_string.h dep/inc/mysql/my_alloc.h \
              dep/inc/mysql/my_getopt.h dep/inc/mysql/my_global.h \
              dep/inc/mysql/my_list.h dep/inc/mysql/my_pthread.h \
              dep/inc/mysql/mysql_com.h dep/inc/mysql/mysqld_error.h \
              dep/inc/mysql/mysql.h dep/inc/mysql/mysql_version.h \
              dep/inc/mysql/my_sys.h dep/inc/mysql/raid.h

