INCLUDES += -I$(srcdir) -I$(srcdir)/../../../../dep/include -I$(srcdir)/../../../ascent-shared
INCLUDES += -I$(srcdir)/../../../ascent-world -I$(srcdir)/../../../../dep/src

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libBattlegroundRealmCreatureAI.la

libBattlegroundRealmCreatureAI_la_SOURCES = Setup.cpp Base.cpp Archbishop.cpp Warlock.cpp
