INCLUDES += -I$(srcdir) -I$(srcdir)/../../../../dep/include -I$(srcdir)/../../../ascent-shared
INCLUDES += -I$(srcdir)/../../../ascent-world -I$(srcdir)/../../../../dep/src

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libBattlegroundRealmGossip.la

libBattlegroundRealmGossip_la_SOURCES = Setup.cpp Quest.cpp HunterTrainer.cpp TrelimLorn.cpp Teleporter.cpp Blacksmith.cpp SeasonVendor.cpp
