INCLUDES += -I$(srcdir) -I$(srcdir)/../../../../dep/include -I$(srcdir)/../../../ascent-shared
INCLUDES += -I$(srcdir)/../../../ascent-world -I$(srcdir)/../../../../dep/src

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libBattlegroundRealm.la

libBattlegroundRealm_la_SOURCES = Setup.cpp HookMgr.cpp Global.cpp GenericBattleground.cpp Mounts.cpp HealerBadges.cpp