# Copyright (C) 2004 Team Python
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.


INCLUDES = -I$(srcdir) -I$(srcdir)/../shared

noinst_LIBRARIES = libgame.a

libgame_a_SOURCES = AuraHandler.cpp AuraHandler.h \
		    Character.cpp Character.h \
                    CharacterHandler.cpp CharacterHandler.h \
                    ChatHandler.cpp ChatHandler.h Combat.cpp Combat.h \
                    GameClient.cpp GameClient.h \
                    GameObject.cpp GameObject.h Group.cpp Group.h \
                    GroupHandler.cpp GroupHandler.h Item.cpp Item.h \
                    ItemHandler.cpp ItemHandler.h \
                    Level0.cpp Level1.cpp Level2.cpp Level3.cpp \
                    MiscHandler.cpp MiscHandler.h \
                    MovementHandler.cpp MovementHandler.h \
                    MsgHandler.h NPCHandler.cpp NPCHandler.h \
		    PetHandler.cpp PetHandler.h \
                    Object.cpp Object.h ObjectMgr.cpp ObjectMgr.h \
                    Opcodes.h Path.h QueryHandler.cpp QueryHandler.h \
                    Quest.h QuestHandler.cpp QuestHandler.h \
                    SkillHandler.cpp SkillHandler.h \
                    SpellHandler.cpp SpellHandler.h Stats.h \
                    TaxiHandler.cpp TaxiHandler.h Unit.cpp Unit.h \
                    UpdateMask.h World.h WorldServer.cpp WorldServer.h


