# Copyright (C) 2004 WoW Daemon
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.


INCLUDES += -I$(srcdir) -I$(srcdir)/../../dep/include  -I$(srcdir)/../shared

noinst_LIBRARIES = libgame.a

libgame_a_SOURCES = \
    CharacterHandler.cpp \
    Chat.cpp \
    ChatHandler.cpp \
    CombatHandler.cpp \
    Corpse.cpp \
    Creature.cpp \
    DynamicObject.cpp \
    GameObject.cpp \
    Group.cpp \
    GroupHandler.cpp \
    Item.cpp \
    ItemHandler.cpp \
    Level0.cpp \
    Level1.cpp \
    Level2.cpp \
    Level3.cpp \
    MiscHandler.cpp \
    MovementHandler.cpp \
    NPCHandler.cpp \
    Object.cpp \
    ObjectMgr.cpp \
    Opcodes.cpp \
    Player.cpp \
    QueryHandler.cpp \
    QuestHandler.cpp \
    SkillHandler.cpp \
    Spell.cpp \
    SpellHandler.cpp \
    TaxiHandler.cpp \
    Unit.cpp \
    UpdateData.cpp \
    World.cpp \
    WorldSession.cpp \
    WorldSocket.cpp \
    WorldSocketMgr.cpp \
    Affect.h \
    Chat.h \
    Corpse.h \
    Creature.h \
    DynamicObject.h \
    GameObject.h \
    Group.h \
    Item.h \
    ItemPrototype.h \
    NPCHandler.h \
    NameTables.h \
    Object.h \
    ObjectMgr.h \
    Opcodes.h \
    Path.h \
    Player.h \
    Quest.h \
    Spell.h \
    SpellPrototype.h \
    Stats.h \
    Unit.h \
    UpdateData.h \
    UpdateFields.h \
    UpdateMask.h \
    World.h \
    WorldSession.h \
    WorldSocket.h \
    WorldSocketMgr.h \
    MapCell.h \
    MapMgr.cpp \
    MapMgr.h \
    ChannelMgr.h \
    ChannelHandler.cpp \
    Channel.cpp \
    Channel.h \
    AuctionHouse.cpp
